<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/image"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:layout_marginStart="@dimen/normal_margin"
        android:layout_marginTop="32dp"
        android:src="@drawable/img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/hello_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/normal_margin"
        android:layout_marginTop="40dp"
        android:text="@string/hello_there_welcome_back"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image" />

    <LinearLayout
        android:layout_width="0dp"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/normal_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hello_title"
        android:layout_height="wrap_content">

        <TextView
            android:layout_marginTop="@dimen/medium_margin"
            android:layout_width="wrap_content"
            android:text="@string/sign_in_to_continue"
            android:textSize="@dimen/text_normal"
            android:layout_height="wrap_content"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_username"
                android:inputType="text"
                android:hint="@string/username"
                android:layout_marginTop="@dimen/medium_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="password_toggle"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <EditText
                android:id="@+id/ed_password"
                android:hint="@string/password"
                android:layout_marginTop="@dimen/small_margin"
                android:layout_width="match_parent"
                android:inputType="numberPassword"
                android:layout_height="wrap_content"
                android:importantForAutofill="no" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:text="@string/forgot_password"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginEnd="@dimen/medium_margin"
            android:layout_marginTop="18dp"
            android:layout_gravity="end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:backgroundTint="@color/black"
            android:text="@string/start"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"/>

        <TextView
            android:layout_marginStart="110dp"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/new_user_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>